# mxnet2caffe

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCaffe.cmake
examples/: config.json
src/: attributes.cpp  attributes.hpp  caffe_layer.cpp  caffe_layer.hpp  common.cpp  common.hpp  converter.cpp  converter.hpp  istream_helper.cpp  istream_helper.hpp  json_helper.hpp  logging.hpp  mxnet2caffe.cpp  mxnet_parser.cpp  mxnet_parser.hpp
