
PROJECT(mxnet2caffe)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_VERBOSE_MAKEFILE "ON" CACHE BOOL "Build with verbose information")
SET(CMAKE_BUILD_TYPE Release CACHE STRING "Build type: Debug/Release")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
ADD_COMPILE_OPTIONS(-std=c++11)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
FIND_PACKAGE(Caffe REQUIRED)
FIND_PACKAGE(Boost REQUIRED system)
FIND_PACKAGE(Protobuf REQUIRED)

FILE(GLOB PROJECT_SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
	${CAFFE_INCLUDE_DIRS}
	${CUDA_INCLUDE_DIRS}
	)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
	${CAFFE_LIBRARIES}
	${PROTOBUF_LIBRARY}
	${Boost_LIBRARIES}
	gflags glog
	)

